Updating base configuration

--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="IRC" content="IRC" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" href="./jcbd_logo_192.png" />
+    <meta name="description" content="React TypeScript JCBD Template" />
     <link rel="apple-touch-icon" href="./jcbd_logo_192.png" />
     <link rel="manifest" href="./manifest.json" />
-    <title>JCBD TypeScript React Template</title>
+    <title>React TypeScript JCBD Template</title>
   </head>
-
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run the ReactTS JCBD Template.</noscript>
     <div id="root"></div>
   </body>
 </html>
